Finish footer style and make body flexible

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
             </svg>
         </div>
     </header>
+    <footer>
+        <p><em>@ 2025 TicTacToe: </em> All rights reserved <em>by lechinta_joshua</em></p>
+    </footer>
 </body>
 </html>
