Add and style win announcement dialog

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                 </div>
             </form>
         </dialog>
+
+        <dialog class="win-dialog">
+            <p class="winner"></p>
+
+            <form method="dialog">
+                <button value="submit">Another Round</button>
+                <button value="cancel">Reset</button>
+            </form>
+        </dialog>
     </main>
     <footer>
         <p><em>@ 2025 TicTacToe: </em> All rights reserved <em>by lechinta_joshua</em></p>
