Add annd style Scoreboard information for each pl

--- a/index.html
+++ b/index.html
@@ -68,6 +68,28 @@
                 <button value="cancel">Reset</button>
             </form>
         </dialog>
+
+        <div class="display">
+            <div class="score-board left">
+                <div>
+                    <p class="first-player name">Player X</p>
+                    <p >Score: <span id="left-score">10</span></p>
+                </div>
+            </div>
+            <div class="center">
+                <p class="winner-announcer">Place Holder Text That Announces player Turn</p>
+
+                <div class="table-board">
+
+                </div>
+            </div>
+            <div class="score-board right">
+                <div>
+                    <p class="second-player name">Player Y</p>
+                    <p>Score: <span id="right-score">9</span></p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <p><em>@ 2025 TicTacToe: </em> All rights reserved <em>by lechinta_joshua</em></p>
