Add and finish style for game board

--- a/index.html
+++ b/index.html
@@ -72,21 +72,18 @@
         <div class="display">
             <div class="score-board left">
                 <div>
-                    <p class="first-player name">Player X</p>
-                    <p >Score: <span id="left-score">10</span></p>
+                    <p class="first-player name"></p>
+                    <p >Score: <span id="left-score"></span></p>
                 </div>
             </div>
             <div class="center">
-                <p class="winner-announcer">Place Holder Text That Announces player Turn</p>
+                <p class="announcer"></p>
 
-                <div class="table-board">
-
-                </div>
             </div>
             <div class="score-board right">
                 <div>
-                    <p class="second-player name">Player Y</p>
-                    <p>Score: <span id="right-score">9</span></p>
+                    <p class="second-player name"></p>
+                    <p>Score: <span id="right-score"></span></p>
                 </div>
             </div>
         </div>
