Create ScreenController IIFE Module Add atributes and methods inside SC Create game loop modals

--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         <div class="display">
             <div class="score-board left">
                 <div>
-                    <p class="first-player name"></p>
+                    <p id="first-player-name"></p>
                     <p >Score: <span id="left-score"></span></p>
                 </div>
             </div>
-            <div class="center">
+            <div class="center" id="center">
                 <p class="announcer"></p>
 
             </div>
             <div class="score-board right">
                 <div>
-                    <p class="second-player name"></p>
+                    <p id="second-player-name"></p>
                     <p>Score: <span id="right-score"></span></p>
                 </div>
             </div>
