Add script for parsing dialog info and game start

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Choose a gameplay style!</p>
             
             <form method="dialog">
-                <button value="robot" class="robot">
+                <button value="Robot" class="robot">
                     AI
                     <svg class="robo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <title>robot</title>
